--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
   firebase: ^8.0.0
   firebase_auth: ^0.18.4+1
-#  cloud_firestore: ^0.14.4
+
 
   firebase_storage: ^5.2.0
   csv: ^4.0.3
@@ -47,6 +47,7 @@ dependencies:
   google_sign_in: ^4.5.9
   timeago: ^3.2.2
   cloud_firestore: ^0.14.4
+  material_dialogs: ^0.1.4
 
 dev_dependencies:
   flutter_test:
